LighteningLab-1/pod1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: logger
spec:
  containers:
    - name: logger
      image: nginx:alpine
      volumeMounts:
        - mountPath: /var/www/nginx
          name: log
  volumes:
    - name: log
      persistentVolumeClaim:
        claimName: log-claim
