LighteningLab-1/pod3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: time-check
  namespace: dvl1987
spec:
  containers:
    - name: time-check
      image: busybox
      command:
        [
          "/bin/sh",
          "-c",
          "while true; do date; sleep $TIME_FREQ;done > /opt/time/time-check.log",
        ]
      volumeMounts:
        - mountPath: /opt/time
          name: a-volume
  volumes:
    - name: a-volume
      emptyDir: {}
